First pass for master thesis application

--- a/prijava/master_rad_prijava.tex
+++ b/prijava/master_rad_prijava.tex
@@ -29,10 +29,7 @@
 \end{flushleft}
 
 \begin{minipage}{16.5cm}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% U donji red upisati naziv master rada umesto teksta: >>Назив мастер рада<<  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\textbf{\textit{\zn Наслов мастер рада''}}
+\textbf{\textit{\zn Развој апликације за добијање уметничке слике на дневном нивоу употребом технологија Spring Boot и React Native''}}
 \end{minipage}\\
 \rule[4mm]{17.5cm}{.05mm}
 \begin{flushleft}
@@ -42,34 +39,13 @@
 % 	-- unutrasnjost pravougaonika --    	  								  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{Значај теме и области:}
-
-% 	Umesto donjeg teksta opisati značaj teme i oblasti	%
-
-Овде описати значај теме и области.\\
 \\
+Због велике употребе мобилних телефона у данашњем друштву, и мањком апликација са циљом ширења културно значајних уметничких слика, добијањем слике на дневном нивоу може да улепша велики број живота. Коришћењем технологија Spring Boot и React Native, у оквиру рада биће развијена апликација, која показује како се употребом технологије може утицати на ширење културних баштина. 
 \\
-\\
-
 \textbf{Специфични циљ рада:}
 
-% 	Umesto donjeg teksta opisati specifični cilj master rada %
-
-Овде описати специфични циљ мастер рада.\\
 \\
-\\
-\\
-
-\textbf{Остале бинте информације:}
-
-% 	Umesto donjeg teksta навести друге битне информације %
-
-Овде (опционо) навести друге битне информације.\\
-\\
-\\
-\\
-
-Овај документ је UTF-8 кодиран и неопходно је да тако и остане
-како би се исправно видела ћирилична слова.
+Циљ овог рада јесте развој апликације за Android и IOS, која сваки дан кориснику даје до сад не виђену уметничку слику, са њеним описом. Корисник ће моћи да сачува своје омиљене слике, ради каснијег опет виђања истих, и биће му приказане слике сличне оним које су му се до сад допале. Поред тога, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би никада пропустио новитете, и биће доступно дељење слика преко других апликација за комуникацију, или чување слике у меморији телефона. Такође ће бити доступна и опција за постављање виџета, тако да корисник не мора да улази у апликацију да би видео нов садржај који апликација има да му да.
 \end{minipage}
 }
 \end{flushleft}
@@ -77,11 +53,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti:       ime i prezime, broj indeksa i modul studenta       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\makebox[10cm][c]{\textbf{<име и презиме>, <бр. индекса>, <смер и модул>}}
+\makebox[10cm][c]{\textbf{Вукан Антић, 1071/2022, Информатика}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti:                   ime i prezime mentora				  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Сагласан ментор \makebox[5cm][c]{\textbf{<ментор>}} \\
+Сагласан ментор \makebox[5cm][c]{\textbf{Владимир Филиповић}} \\
 \rule[4mm]{10cm}{.05mm} \hfill \raisebox{4mm}{\makebox[5cm][l]{.\dotfill.}} \\
 \raisebox{1cm}%
 [9mm][0mm]{\makebox[10cm][c]{\textit{(име и презиме студента, бр. индекса, модул)}}} \\
@@ -117,7 +93,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red upisati              katedru									  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Катедра \makebox[9.5cm][l]{\textbf{<катедра>}} је сагласна са предложеном темом.
+Катедра \makebox[9.5cm][l]{\textbf{за рачунарство и информатику}} је сагласна са предложеном темом.
 \vspace{-3mm}
 \hspace*{13mm} \rule[2.3cm]{9.5cm}{.05mm}\\
 \vspace{-1cm}
