Per proffesors request, changed the theme of the masters

--- a/prijava/master_rad_prijava.tex
+++ b/prijava/master_rad_prijava.tex
@@ -29,7 +29,7 @@
 \end{flushleft}
 
 \begin{minipage}{16.5cm}
-\textbf{\textit{\zn Развој апликације за добијање уметничке слике на дневном нивоу употребом технологија Spring Boot и React Native''}}
+\textbf{\textit{\zn Упоређивање протокола за комуникацију GraphQL, GRPC и Rest, развојом мобилне апликације употребом технологија Spring Boot и React Native''}}
 \end{minipage}\\
 \rule[4mm]{17.5cm}{.05mm}
 \begin{flushleft}
@@ -37,12 +37,12 @@
 \begin{minipage}[t][6cm]{17cm}
 \textbf{Значај теме и области:}
 \\
-Због велике употребе мобилних телефона у данашњем друштву, и мањком апликација са циљом ширења културно значајних уметничких слика, добијањем слике на дневном нивоу може да улепша велики број живота. Коришћењем технологија Spring Boot и React Native, у оквиру рада биће развијена апликација, која показује како се употребом технологије може утицати на ширење културних баштина. 
+Са растућом количином мобилних апликација, комуникација између клијента и сервера се најчешће сведе на коришћење Rest протокола, али, протоколи као што су  GraphQL и GRPC дају боље преформансе, повећану флексибилност, као и скалабилност. Зато, имплементацијом свих наведених протокола у оквиру исте апликације може показати кад је најбоље користити који протокол.
 \\
 \textbf{Специфични циљ рада:}
 
 \\
-Циљ овог рада јесте развој апликације за Android и IOS, која сваки дан кориснику даје до сад не виђену уметничку слику, са њеним описом. Корисник ће моћи да сачува своје омиљене слике, ради каснијег опет виђања истих, и биће му приказане слике сличне оним које су му се до сад допале. Поред тога, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би никада пропустио новитете, и биће доступно дељење слика преко других апликација за комуникацију, или чување слике у меморији телефона. Такође ће бити доступна и опција за постављање виџета, тако да корисник не мора да улази у апликацију да би видео нов садржај који апликација има да му да.
+Циљ овог рада јесте развој микросервисне апликације за Android и IOS, коришћењем Spring Boot и React Native технологија, и касније поређење различитих протокола за комуникацију између клијента и сервера, као што су GraphQL, GRPC и Rest. Апликација ће свакодневно давати кориснику нову уметничку слику, са детаљним описом, и даће му могућност да сачува своје омиљене, ради даљег препоручивања новог садржаја. Поред тога, корисник ће моћи да дели слике преко других апликација, као и да сачува слику у меморију свог телефона. Такође, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би пропустио новитете у апликацији. 
 \end{minipage}
 }
 \end{flushleft}
