--- a/prijava/master_rad_prijava.tex
+++ b/prijava/master_rad_prijava.tex
@@ -42,7 +42,7 @@
 \textbf{Специфични циљ рада:}
 
 \\
-Циљ овог рада јесте развој микросервисне апликације за Android и IOS, коришћењем Spring Boot и React Native технологија, и касније поређење различитих протокола за комуникацију између клијента и сервера, као што су GraphQL, GRPC и Rest. Апликација ће свакодневно давати кориснику нову уметничку слику, са детаљним описом, и даће му могућност да сачува своје омиљене, ради даљег препоручивања новог садржаја. Поред тога, корисник ће моћи да дели слике преко других апликација, као и да сачува слику у меморију свог телефона. Такође, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би пропустио новитете у апликацији. 
+Циљ овог рада је поређење претходно наведених протокола за комуникацију између клијента и сервера. У ту сврху, биће развијена микросервисна апликација за Android и IOS, коришћењем Spring Boot и React Native технологија. Апликација ће свакодневно давати кориснику нову уметничку слику, са детаљним описом, и даће му могућност да сачува своје омиљене, ради даљег препоручивања новог садржаја. Поред тога, корисник ће моћи да дели слике преко других апликација, као и да сачува слику у меморију свог телефона. Такође, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би пропустио новитете у апликацији. Развијена апликација ће бити доступна као софтвер отвореног кода.
 \end{minipage}
 }
 \end{flushleft}
