Newest version of master thesis application

--- a/prijava/master_rad_prijava.tex
+++ b/prijava/master_rad_prijava.tex
@@ -34,7 +34,7 @@
 \rule[4mm]{17.5cm}{.05mm}
 \begin{flushleft}
 \framebox{
-\begin{minipage}[t][6cm]{17cm}
+\begin{minipage}[t][7cm]{17cm}
 \textbf{Значај теме и области:}
 \\
 Са растућом количином мобилних апликација, комуникација између клијента и сервера се најчешће сведе на коришћење Rest протокола, али, протоколи као што су  GraphQL и GRPC дају боље преформансе, повећану флексибилност, као и скалабилност. Зато, имплементацијом свих наведених протокола у оквиру исте апликације може показати кад је најбоље користити који протокол.
@@ -42,7 +42,7 @@
 \textbf{Специфични циљ рада:}
 
 \\
-Циљ овог рада је поређење претходно наведених протокола за комуникацију између клијента и сервера. У ту сврху, биће развијена микросервисна апликација за Android и IOS, коришћењем Spring Boot и React Native технологија. Апликација ће свакодневно давати кориснику нову уметничку слику, са детаљним описом, и даће му могућност да сачува своје омиљене, ради даљег препоручивања новог садржаја. Поред тога, корисник ће моћи да дели слике преко других апликација, као и да сачува слику у меморију свог телефона. Такође, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би пропустио новитете у апликацији. Развијена апликација ће бити доступна као софтвер отвореног кода.
+Циљ овог рада је поређење претходно наведених протокола за комуникацију између клијента и сервера. У ту сврху, биће развијена микросервисна апликација за Android и IOS, коришћењем Spring Boot и React Native технологија. Апликација ће свакодневно давати кориснику нову уметничку слику, са детаљним описом, и даће му могућност да сачува своје омиљене, ради даљег препоручивања новог садржаја. Поред тога, корисник ће моћи да дели слике преко других апликација, као и да сачува слику у меморију свог телефона. Такође, при изласку нове слике за корисника, добиће обавештење на свом уређају, тако да не би пропустио новитете у апликацији. У оквиру рада ће се извршити поређење перформанси комуникације на развијеној апликацији, и биће изведени одговарајући закључци. Развијена апликација ће бити доступна као софтвер отвореног кода.
 \end{minipage}
 }
 \end{flushleft}
@@ -62,12 +62,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti datum podnosenja molbe									  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\makebox[5.5cm][c]{\textbf{<датум>}}\makebox[5.5cm]{}  Чланови комисије\\
+\makebox[5.5cm][c]{\textbf{21.4.2025.}}\makebox[5.5cm]{}  Чланови комисије\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % POPUNJAVA MENTOR (rucno ili na sledeci nacin):							  %
 % u donji red umesto .\dotfill. upisati podatke o 1. clanu komisije		      %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\rule[4mm]{5.5cm}{.05mm}\makebox[5.5cm]{ } 1. \makebox[6cm][l]{.\dotfill.}\\
+\rule[4mm]{5.5cm}{.05mm}\makebox[5.5cm]{ } 1. \makebox[6cm][l]{Александар Картељ}\\
 \vspace{-8mm}\\
 \raisebox{4mm}%														
 [7mm][0mm]{\makebox[5.5cm][c]{\textit{(датум подношења молбе)}}}\makebox[5.5cm]{ }
@@ -75,7 +75,7 @@
 % POPUNJAVA MENTOR (rucno ili na sledeci nacin): 							  %
 % u donji red umesto .\dotfill. upisati podatke o 2. clanu komisije           %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-2. \makebox[6cm][l]{.\dotfill.}\\
+2. \makebox[6cm][l]{Сташа Вујичић Станковић}\\
 
 \vspace{1cm}
 
